# stepper-motion-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  clippy.toml  motion.toml  rustfmt.toml
.github/agents/: copilot-instructions.md
.specify/memory/: constitution.md
examples/: basic_motor.rs  config_driven.rs  multi_motor.rs
specs/001-trajectory-config/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-trajectory-config/checklists/: requirements.md
specs/001-trajectory-config/contracts/: config-schema.md
src/: error.rs  lib.rs
src/config/: limits.rs  loader.rs  mechanical.rs  mod.rs  motor.rs  system.rs  trajectory.rs  units.rs  validation.rs
src/motion/: executor.rs  mod.rs  profile.rs
src/motor/: builder.rs  driver.rs  mod.rs  position.rs  state.rs  system.rs
src/trajectory/: builder.rs  mod.rs  registry.rs
tests/: integration_tests.rs
tests/unit/: config_parsing.rs  config_validation.rs  mod.rs
